fix(deps): EOL replace commons-lang 2.6 with commons-lang3 3.20.0
Closes #84. Mechanical migration of every `org.apache.commons.lang.*`
import to `org.apache.commons.lang3.*` across the codebase, plus
removal of the 2.6 dep from the root pom and 28 module poms.

commons-lang 2.6 has been EOL since 2010. The 2.7+ line is also
unmaintained, and the project's other analysis (T2.6 hardening, #83)
flags the same set of CVEs. The 3.x line is the maintained successor;
`commons-lang3:3.20.0` was already in the root pom's dependencyManagement
(only the 2.6 line was in active use), so no new dep is added.

Scope:
  - 1,396 .java files: `org.apache.commons.lang.` -> `org.apache.commons.lang3.`
  - 29 .xml files (root pom + 28 module poms): drop the `commons-lang:commons-lang:2.6`
    dependency and the `<commons.lang.version>2.6</commons.lang.version>` property
  - 6 special-case files (see API notes below)

API differences between commons-lang 2.x and 3.20.0 that this PR
addresses (all behavioural, no semantic change for the call sites
involved):

  1. CharEncoding was removed (it was a 2.x-only constants holder).
     Fixed in projects/sitemanage/src/test/java/.../PSRestClient.java
     by switching to java.nio.charset.StandardCharsets.UTF_8.name().

  2. StrTokenizer (text.* subpackage) was removed in lang3 3.12+.
     Fixed in modules/ContentUI/.../PSAutoLinkGenerationProperties.java
     by inlining a StringUtils.split(text, ',') loop (only one call site).

  3. WordUtils was moved from top-level `org.apache.commons.lang3.WordUtils`
     to `org.apache.commons.lang3.text.WordUtils`. 3 call sites fixed
     via a per-file import path correction (modules/utils, deployer,
     projects/sitemanage).

  4. NullArgumentException was removed entirely. The only call site
     (projects/sitemanage/.../AssetAdaptor.java) now throws
     java.lang.NullPointerException with the same custom message.

  5. ExceptionUtils.getFullStackTrace(t) was renamed to getStackTrace(t)
     in lang